--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="main">
       <div class="container">
-        <div class="bos">
+        <div class="blank">
           <div class="upp-text"></div>
           <div class="down-text"></div>
         </div>
